# toml_req_test

./: myscript.py  pyproject.toml  requirements.txt
